# progvar-library

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  run.sh  run_tests.sh
.github/workflows/: main.yml  run_pre-commit.yml  run_pvl_tests.yml
docs/: _config.yml  index.md
docs/_layouts/: default.html
notebook/: Makefile  build_notebook.sh  build_tex.py  makefile.sh  notebook.tex  preprocess.py
notebook/structure/: data-structures.md  dp.md
notebook/tex/: algebra.tex  combinatorics.tex  data-structures.tex  dp.tex  geometry.tex  graphs.tex  math.tex  number_theory.tex  numerical.tex  other.tex  other_combinatorics.tex  strings.tex  useful_info.tex
pvl/: base.hpp
pvl/abridged/: header.cpp
pvl/abridged/data-structures/: dynamic_data_struct.cpp  fenwick.cpp  fenwick_max.test.cpp  leq_counter_ar.cpp  min_stack_queue.cpp  mo.cpp  (+14 more)
pvl/data-structures/: segtree_persistent_lazy.hpp
pvl/graph/: graph.hpp  unweighted_graphs.hpp  weighted_graphs.hpp
pvl/graphs/: centroid_decomposition.hpp  unweighted_graphs.hpp  weighted_graphs.hpp
pvl/math/: algebra.hpp  constants.hpp  prime_sieve.hpp
pvl/strings/: z.hpp
src/data-structures/: fenwick.test.cpp  fenwick_max.cpp  leq_counter_map.cpp  misof_tree.cpp  segtree_iter_PU_RQ.cpp  segtree_iter_PU_RQ.test.cpp  segtree_rec_PU_RQ.cpp  segtree_rec_RU_RQ.cpp  segtree_rec_RU_RQ.test.cpp  sparse.test.cpp  sparse_2d.cpp  splay.cpp  union_find.cpp  unique_counter.cpp
src/dp/: dynamic-ch-trick.cpp
src/geom/: angles-rots.cpp  circ-circ-isect.cpp  circ-line-isect.cpp  closest-pair.cpp  compgeom.cpp  convex-hull.cpp  convex-poly-isect.cpp  cyc-quad-area.cpp  dists.cpp  great-circle.cpp  kd-tree.cpp  min-enclosing-circ.cpp  picks.cpp  poly-area.cpp  pt-in-poly.cpp  pt-proj.cpp  shamos.cpp  tri-centers.cpp
src/graphs/: arborescence.cpp  graph_template_edgelist.cpp  heavy_light_decomposition.cpp  tree_isomorphism.cpp
src/other/: dpll.cpp  floyds_algorithm.cpp  simplex.cpp  stable_marriage.cpp  two_sat.cpp
src/strings/: aho-corasick-trie.java  booth.cpp  lcp.cpp  palindromic-tree.cpp  suffix-array.cpp
src/tricks/: fast_input.cpp  snoob.cpp
tests/: CMakeLists.txt  build.sh  prime_sieve.cc  z.cc
tests/data-structures/: segtree_persistent_lazy.cc
tests/graph/: CMakeLists.txt  graph.cc
tests/graph/shortest_paths/: dijkstra.cc
tests/graphs/: CMakeLists.txt  centroid_decomposition.cc  tree.cc  unwieghted_graphs.cc
tests/graphs/max_flow/: dinic.cc  max_flow.cc
tests/graphs/mst/: prim.cc
tests/graphs/shortest_paths/: dijkstra.cc  floyd_warshall.cc
tests/math/numtheory/: prime_sieve.cc
tests/strings/: z.cc
(+109 files in other folders)
